[gd_scene load_steps=4 format=3 uid="uid://cvc4vupjcjrpf"]

[ext_resource type="Script" uid="uid://dnfh4tdhxnhc8" path="res://scenes/main_game.gd" id="1_p73vr"]
[ext_resource type="PackedScene" uid="uid://b7bvihb7o70xe" path="res://scenes/GameManager.tscn" id="1_xej52"]
[ext_resource type="PackedScene" uid="uid://cjl6ou1bmsixm" path="res://scenes/SpringSeason.tscn" id="2_p73vr"]

[node name="MainGame" type="Node2D"]
script = ExtResource("1_p73vr")

[node name="GameManager" parent="." instance=ExtResource("1_xej52")]

[node name="SpringSeason" parent="." instance=ExtResource("2_p73vr")]

[node name="UI" type="CanvasLayer" parent="."]

[node name="InfoPanel" type="Panel" parent="UI"]
offset_left = 20.0
offset_top = 20.0
offset_right = 320.0
offset_bottom = 170.0

[node name="SeasonLabel" type="Label" parent="UI/InfoPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 73.0
offset_bottom = 33.0
text = "فصل بهار"

[node name="ScoreLabel" type="Label" parent="UI/InfoPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 50.0
offset_right = 50.0
offset_bottom = 73.0
text = "امتیاز : 2000"

[node name="ItemsLabel" type="Label" parent="UI/InfoPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 90.0
offset_right = 93.0
offset_bottom = 113.0
text = "آیتم ها : هیچ"
